把的图像预处理函数封装成了类

--- a/C++Opencv.vcxproj
+++ b/C++Opencv.vcxproj
@@ -133,6 +133,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="C++Opencv.cpp" />
+    <ClCompile Include="ImgProcessor.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ImgProcessor.h" />
+    <ClInclude Include="MyTypes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
